# rough-py

./: .gitignore  API.md  FAQ.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish-pypi.yml
examples/: example-quickstart.py  example-readme.py  example-stylegallery.md  example-stylegallery.py  example1.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example17.py  example18.py  example19.py  example2.py  example20.py  example21.py  example22.py  example23.py  example24.py  example25.py  example26.py  example27.py  example28.py  example29.py  example3.py  example30.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  examples.md
rough/: __init__.py  canvas.py  core.py  generator.py  geometry.py  math.py  renderer.py
rough/fillers/: dashed_filler.py  dot_filler.py  filler.py  filler_interface.py  hachure_filler.py  hatch_filler.py  scan_line_hachure.py  zigzag_filler.py  zigzag_line_filler.py
tests/: test_compare_svg_and_canvas_flows.py  test_detailed_shapes.py  test_roughen_svg.py  test_roughjs_visual_tests.py  test_simple_svg_paths.py  test_svg_stack_dataset.py
